@@ -33,7 +33,7 @@ SOURCES = attenuator.cpp dcblock.cpp open.cpp vccs.cpp \
 	irect.cpp amplifier.cpp opamp.cpp iinoise.cpp mutual.cpp mutual2.cpp \
 	vvnoise.cpp ivnoise.cpp coupler.cpp coaxline.cpp vprobe.cpp vam.cpp  \
 	vpm.cpp tswitch.cpp relais.cpp short.cpp tline4p.cpp twistedpair.cpp \
-	vexp.cpp iexp.cpp mutualx.cpp
+	vexp.cpp iexp.cpp mutualx.cpp vfile.cpp
 
 # Additional libraries.
 LIBS = 
